k8s/cluster2-gke/sender/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sender
  namespace: default
  labels:
    app: sender
spec:
  selector:
    app: sender
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
